examples/simple/undefined/UB-CER3-bad.c
// Copyright (c) 2015 Runtime Verification, Inc. All Rights Reserved.

int main() {
  int y = 0;
  int *x = 0;
  y = *x;
  return 0;
}
